<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eventos Deportivos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtbtn_inici_informacion">INFORMACION</string>
    <string name="txtbtn_inici_eventos">EVENTOS</string>
    <string name="txtbtn_inici_noticias">NOTICIAS</string>
    <string name="txtbtn_inici_servicios">SERVICIOS</string>
    <string name="title_activity_informacion">Informacion</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="title_activity_servicios">Servicios</string>
    <string name="title_activity_noticias">Noticias</string>

</resources>
