<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="es.pymeapps.eventosdeportivos.Inicio" >

    <ImageView
        android:id="@+id/imgbtn_inicio_informacion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:background="@color/rosa"
        android:contentDescription="@string/txtbtn_inici_informacion"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_informacion" />

    <TextView
        android:id="@+id/txtbtn_inicio_informacion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:background="@color/rosa"
        android:gravity="center_horizontal"
        android:text="@string/txtbtn_inici_informacion"
        android:textSize="@dimen/letra_mediana" />

    <ImageView
        android:id="@+id/imgbtn_inicio_eventos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:contentDescription="@string/txtbtn_inici_eventos"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_eventos" />

    <TextView
        android:id="@+id/txtbtn_inicio_eventos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:gravity="center_horizontal"
        android:text="@string/txtbtn_inici_eventos"
        android:textSize="@dimen/letra_mediana" />

    <ImageView
        android:id="@+id/imgbtn_inicio_noticias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:background="@color/rosa"
        android:contentDescription="@string/txtbtn_inici_noticias"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_noticias" />

    <TextView
        android:id="@+id/txtbtn_inicio_noticias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:background="@color/rosa"
        android:gravity="center_horizontal"
        android:text="@string/txtbtn_inici_noticias"
        android:textSize="@dimen/letra_mediana" />

    <ImageView
        android:id="@+id/imgbtn_inicio_servicios"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:contentDescription="@string/txtbtn_inici_servicios"
        android:paddingTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_servicios" />

    <TextView
        android:id="@+id/txtbtn_inicio_servicios"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:gravity="center_horizontal"
        android:text="@string/txtbtn_inici_servicios"
        android:textSize="@dimen/letra_mediana" />

</LinearLayout>
